- fix reel image width on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,18 +75,23 @@ div.narrowed {
 
 .reel-card {
   height: 30vh;
-  width: auto;
+  min-width: 0;
   position: relative;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 
   a {
-    flex: 1;
+    display: block;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
   }
-  /* margin: 4rem 0; */
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
 }
 
 .reel-details {
